Fixed template issue on mobile and tablet devices.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -1,5 +1,5 @@
 @import "bootstrap";
-body.v1 { padding-top: 60px; }
+body { padding-top: 60px; }
 @import "bootstrap-responsive";
 
 body.v1 { 
